--- a/src/pages/cups.html
+++ b/src/pages/cups.html
@@ -42,7 +42,7 @@
 	function sendFeedback(message) {
 	  let feedback = { message: message };
 
-	  fetch('https://goldenrod-verdant-rayon.glitch.me:3000/log', {
+	  fetch('https://goldenrod-verdant-rayon.glitch.me/log', {
 		method: 'POST',
 		headers: {
 		  'Content-Type': 'application/json'
