--- a/src/pages/cups.html
+++ b/src/pages/cups.html
@@ -53,7 +53,7 @@
 		if (!response.ok) {
 		  throw new Error('Network response was not ok');
 		}
-		return response.json();
+		return response.text();
 	  })
 	  .then(data => {
 		console.log('Feedback sent successfully:', data);
