--- a/cups.html
+++ b/cups.html
@@ -10,11 +10,29 @@
       text-align: center;
       margin: 50px;
     }
+
     button {
       margin: 10px;
       padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
+      font-family: 'Titillium Web', sans-serif;
+      font-weight: 700;
+      color: white;
+      border: 2px solid black;
+      border-radius: 8px;
+    }
+
+    #crveno {
+      background-color: red;
+    }
+
+    #zuto {
+      background-color: gold;
+    }
+
+    #zeleno {
+      background-color: green;
     }
   </style>
 </head>
@@ -30,11 +48,11 @@
   <script>
     //implementiraj /resetlog pa izbrisi komentar u server.js
     
-    document.getElementById('crveno').addEventListener('click', sendFeedback('crveno'));
+    document.getElementById('crveno').addEventListener('click', function(){sendFeedback('crveno');});
 
-    document.getElementById('zuto').addEventListener('click', sendFeedback('crveno'));
+    document.getElementById('zuto').addEventListener('click', function(){sendFeedback('zuto');});
 
-    document.getElementById('zeleno').addEventListener('click', sendFeedback('crveno'));
+    document.getElementById('zeleno').addEventListener('click', function(){sendFeedback('zeleno');});
 	function sendFeedback(message) {
 	  let feedback = { message: message };
 
