👴📚 Checkpoint ./cups.html:68907828/204 ./server.js:68907828/19

--- a/cups.html
+++ b/cups.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Class Feedback</title>
+  <title>PFE Dugmići</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Titillium Web', sans-serif;
       text-align: center;
       margin: 50px;
+      -webkit-font-smoothing: antialiased;
     }
 
     button {
@@ -21,6 +22,7 @@
       color: white;
       border: 2px solid black;
       border-radius: 8px;
+      -webkit-font-smoothing: antialiased;
     }
 
     #crveno {
@@ -37,7 +39,7 @@
   </style>
 </head>
 <body>
-  <h1>Online Class Feedback</h1>
+  <h1>PFE Dugmići</h1>
   <div>
     <button id="crveno">Ne razumem ovaj deo, ponovi</button>
     <button id="zuto">Ovo je komplikovano, pričaj malo sporije</button>
