--- a/cups.html
+++ b/cups.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PFE Dugmići</title>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Titillium Web', sans-serif;
+      font-family: titillium web, sans-serif;
       text-align: center;
       margin: 50px;
       -webkit-font-smoothing: antialiased;
@@ -17,7 +18,7 @@
       padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
-      font-family: 'Titillium Web', sans-serif;
+      font-family: titillium web, sans-serif;
       font-weight: 700;
       color: white;
       border: 2px solid black;
@@ -46,7 +47,7 @@
     <button id="zeleno">Sve jasno</button>
   </div>
 
-  <!-- Script to handle button clicks -->
+  
   <script>
     //implementiraj /resetlog pa izbrisi komentar u server.js
     
