👌👟 Checkpoint ./cups.html:68907828/4741

--- a/cups.html
+++ b/cups.html
@@ -19,27 +19,28 @@
 
     button {
       margin: 10px;
-      padding: 10px 30px;
-      font-size: 24px;
+      padding: 15px 20px; 
+      font-size: 26px;
       cursor: pointer;
-      font-family: titillium web, sans-serif;
+      font-family: 'Titillium Web', sans-serif;
       font-weight: 700;
       color: white;
       border: 2px solid black;
-      border-radius: 8px;
-      -webkit-font-smoothing: antialiased;
+      border-radius: 12px;
+      width: 300px; 
+      height: 150px; 
     }
 
     #crveno-dugme  {
-      background-color: red;
+      background-color: #C01010;
     }
 
     #zuto-dugme {
-      background-color: gold;
+      background-color: #F0D000;
     }
 
     #zeleno-dugme {
-      background-color: #009999;
+      background-color: #009988;
     }
   </style>
 </head>
