--- a/cups.html
+++ b/cups.html
@@ -55,9 +55,10 @@
     
     #send-message-btn {
       width: 150px; 
-      height: 50px;
+      height: 56px;
       background-color: #B0B0B0;
-      margin: 0px;
+      margin: 6px;
+      padding: 4px 4px; 
     }
   </style>
 </head>
