--- a/predavac.html
+++ b/predavac.html
@@ -10,6 +10,10 @@
     <div id="log"></div>
     <button onclick="resetLog()">Reset Log</button>
     <button onclick="saveLog()">Save Log</button>
+    <audio id="message-sound">
+      <source src="notification_sound.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
 
     
     <script>
@@ -21,6 +25,8 @@
         });
 
         // Handle new log message
+        socket.on('ping', document.getElementById('message-sound').play();)
+      
         socket.on('newLogMessage', (message) => {
             displayLog([message]);
         });
@@ -28,6 +34,7 @@
         // Handle log reset
         socket.on('logReset', () => {
             document.getElementById('log').innerHTML = '';
+          //uradi jos nesto
         });
 
         function displayLog(log) {
