🌺🌌 Checkpoint ./server.js:68907828/6019 ./predavac.html:68907828/953 ./cups.html:68907828/23

--- a/cups.html
+++ b/cups.html
@@ -115,15 +115,15 @@
       const now = Date.now();
       // Check if enough time has passed since last request
       if (now - lastRequestTime >= minRequestInterval) {
-        sendFeedback(message);
+        sendFeedback(message, true);
         lastRequestTime = now; // Update last request time
       } else {
         console.log('Please wait at least 1 minute before sending another feedback.');
       }
     }
     
-    function sendFeedback(message) {
-      let feedback = { message: message };
+    function sendFeedback(message, ping) {
+      let feedback = { message: message, ping:ping };
 
       fetch('https://goldenrod-verdant-rayon.glitch.me/log', {
       method: 'POST',
