🏕🍫 Checkpoint ./server.js:68907828/605 ./cups.html:68907828/38

--- a/cups.html
+++ b/cups.html
@@ -123,7 +123,7 @@
     }
     
     function sendFeedback(message, ping) {
-      let feedback = { message: message, ping:ping };
+      let feedback = { message: message};
 
       fetch('https://goldenrod-verdant-rayon.glitch.me/log', {
       method: 'POST',
