🎡👝 Checkpoint ./server.js:68907828/72 ./cups.html:68907828/34

--- a/cups.html
+++ b/cups.html
@@ -125,7 +125,7 @@
     function sendFeedback(message, ping) {
       let feedback = { message: message};
 
-      fetch('https://goldenrod-verdant-rayon.glitch.me/log', {
+      fetch('https://pfe-dugmici.glitch.me/log', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
