🌴👩‍❤️‍💋‍👩 Checkpoint ./predavac novo.html:68907828/614 ./server.js:68907828/130 ./cups.html:68907828/14

--- a/cups.html
+++ b/cups.html
@@ -123,7 +123,7 @@
     }
     
     function sendFeedback(message, ping) {
-      let feedback = { message: message};
+      let feedback = { message: message, ping: ping};
 
       fetch('https://pfe-dugmici.glitch.me/log', {
       method: 'POST',
