🍉🌅 Checkpoint ./predavac novo.html:68907828/315

--- a/predavac novo.html
+++ b/predavac novo.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>Stranica za predavače</h1>
+    <p>
+    TEST SAJT - Za upotrebu na predavanju, radi zastite podesiti minRequestInterval na 30000 (to je sve).  
+    </p>
     <button id="dozvoli-zvuk" onclick="allowSound()" >Klikni ovo dugme da bi dozvolio zvuk</button>
     <button onclick="resetLog()">Reset Log</button>
     <button onclick="saveLog()">Save Log</button>
