👐🌑 Checkpoint ./server.js:68907828/34 ./cups.html:68907828/4071

--- a/cups.html
+++ b/cups.html
@@ -60,8 +60,14 @@ Trenutno je stavljeno na kratko radi testiranja.
       width: 150px; 
       height: 56px;
       background-color: #B0B0B0;
-      margin: 6px;
+      margin-left: 10px;
       padding: 4px 4px; 
+    }
+    .input-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
     }
   </style>
 </head>
