💎🏍 Checkpoint ./cups.html:68907828/29

--- a/cups.html
+++ b/cups.html
@@ -63,6 +63,7 @@ Trenutno je stavljeno na kratko radi testiranja.
       margin-left: 10px;
       padding: 4px 4px; 
     }
+    
     .input-container {
       display: flex;
       justify-content: center;
@@ -82,7 +83,7 @@ Trenutno je stavljeno na kratko radi testiranja.
   <div>
     <button id="zeleno-dugme">Sve jasno</button>
   </div> -->
-  <div>
+  <div class="input-container">
     <input type="text" id="message-input" placeholder=" Napiši poruku">
     <button id="send-message-btn">Pošalji poruku</button>
   </div>
