--- a/predavac novo.html
+++ b/predavac novo.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Stranica za predavače</h1>
     <p>
-    TEST SAJT - Za upotrebu na predavanju, radi zastite podesiti minRequestInterval na 30000 (to je sve).  
+    Za upotrebu na predavanju, radi zastite je podesen minRequestInterval na 30000 (30 sekundi). Za potrebu testiranja smanjiti (u kodu)  
     </p>
     <button id="dozvoli-zvuk" onclick="allowSound()" >Klikni ovo dugme da bi dozvolio zvuk</button>
     <button onclick="resetLog()">Reset Log</button>
