🌻🐙 Checkpoint ./cups.html:68907828/43

--- a/cups.html
+++ b/cups.html
@@ -95,7 +95,7 @@ Trenutno je stavljeno na kratko radi testiranja.
   <script>
     //implementiraj /resetlog pa izbrisi komentar u server.js
     
-    document.getElementById('crveno-dugme').addEventListener('click', function(){handleMessageAttempt('crveno dugme');});
+    document.getElementById('crveno-dugme').addEventListener('click', function(){handleMessageAttempt('Ne razumem, ponovi ovaj deo');});
 //     document.getElementById('zuto-dugme').addEventListener('click', function(){handleMessageAttempt('zuto');});
 //     document.getElementById('zeleno-dugme').addEventListener('click', function(){handleMessageAttempt('zeleno');});
     
